<resources>
  <string name="app_name">GeofenceDetectorSample</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>

  <string name="insufficient_permissions">Insufficient permissions.</string>
  <string name="permission_rationale">Location permission is needed for core functionality</string>
  <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
  <string name="location_mode_explanation">Please set "High accuracy" or "Battery saving" mode</string>
  <string name="settings">Settings</string>
  <string name="location_mode">Location mode</string>

  <!-- Error strings -->
  <string name="geofence_not_available">Geofence service is not available now</string>
  <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
  <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
  <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
  <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

  <!-- Transition type strings -->
  <string name="geofence_transition_entered">Entered</string>
  <string name="geofence_transition_exited">Exited</string>
  <string name="unknown_geofence_transition">Unknown Transition</string>


  <string name="map_title">Map</string>
  <string name="save_title">Save</string>
  <string name="status_title">Status:</string>
  <string name="latitude_hint">Latitude</string>
  <string name="longitude_hint">Longitude</string>
  <string name="radius_hint">Radius</string>
  <string name="wifi_hint">SSID</string>




</resources>
